<resources>
    <string name="app_name">Calculadora</string>
    <string name="clear">C</string>
    <string name="division">÷</string>
    <string name="multiplication">x</string>
    <string name="del">del</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="subtraction">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="addition">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="settings">Configurações</string>
    <string name="tutto">Tutorial</string>
    <string name="back">Voltar</string>
    <string name="save">Salvar</string>
</resources>
