<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.augusto.aula.MainActivity">

    <EditText
        android:id="@+id/calc_text"
        android:layout_width="369dp"
        android:layout_height="118dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:cursorVisible="false"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/del_btn"
        android:layout_width="86dp"
        android:layout_height="71dp"
        android:layout_marginStart="268dp"
        android:text="@string/del"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear_btn" />

    <Button
        android:id="@+id/mult_btn"
        android:layout_width="86dp"
        android:layout_height="71dp"
        android:layout_marginStart="92dp"
        android:text="@string/multiplication"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two_btn" />

    <Button
        android:id="@+id/div_btn"
        android:layout_width="86dp"
        android:layout_height="71dp"
        android:layout_marginStart="180dp"
        android:text="@string/division"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/three_btn" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="86dp"
        android:layout_height="71dp"
        android:layout_marginStart="268dp"
        android:text="@string/addition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_btn" />

    <Button
        android:id="@+id/sub_btn"
        android:layout_width="86dp"
        android:layout_height="71dp"
        android:layout_marginStart="268dp"
        android:text="@string/subtraction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/del_btn" />

    <Button
        android:id="@+id/nine_btn"
        android:layout_width="86dp"
        android:layout_height="71dp"
        android:layout_marginStart="180dp"
        android:text="@string/nine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear_btn" />

    <Button
        android:id="@+id/eight_btn"
        android:layout_width="86dp"
        android:layout_height="71dp"
        android:layout_marginStart="92dp"
        android:text="@string/eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear_btn" />

    <Button
        android:id="@+id/six_btn"
        android:layout_width="86dp"
        android:layout_height="71dp"
        android:layout_marginStart="180dp"
        android:text="@string/six"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nine_btn" />

    <Button
        android:id="@+id/five_btn"
        android:layout_width="86dp"
        android:layout_height="71dp"
        android:layout_marginStart="92dp"
        android:text="@string/five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eight_btn" />

    <Button
        android:id="@+id/equal_btn"
        android:layout_width="86dp"
        android:layout_height="71dp"
        android:layout_marginStart="268dp"
        android:text="@string/equals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_btn" />

    <Button
        android:id="@+id/three_btn"
        android:layout_width="86dp"
        android:layout_height="71dp"
        android:layout_marginStart="180dp"
        android:text="@string/three"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/six_btn" />

    <Button
        android:id="@+id/two_btn"
        android:layout_width="86dp"
        android:layout_height="71dp"
        android:layout_marginStart="92dp"
        android:text="@string/two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/five_btn" />

    <Button
        android:id="@+id/zero_btn"
        android:layout_width="86dp"
        android:layout_height="71dp"
        android:layout_marginStart="4dp"
        android:text="@string/zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_btn" />

    <Button
        android:id="@+id/one_btn"
        android:layout_width="86dp"
        android:layout_height="71dp"
        android:layout_marginStart="4dp"
        android:text="@string/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four_btn" />

    <Button
        android:id="@+id/four_btn"
        android:layout_width="86dp"
        android:layout_height="71dp"
        android:layout_marginStart="4dp"
        android:text="@string/four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven_btn" />

    <Button
        android:id="@+id/seven_btn"
        android:layout_width="86dp"
        android:layout_height="71dp"
        android:layout_marginStart="4dp"
        android:text="@string/seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear_btn" />

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="86dp"
        android:layout_height="71dp"
        android:layout_marginStart="268dp"
        android:text="@string/clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calc_text" />

</android.support.constraint.ConstraintLayout>
